--- a/conf/log4j.properties.template
+++ b/conf/log4j.properties.template
@@ -39,3 +39,6 @@ log4j.logger.parquet=ERROR
 log4j.logger.org.apache.hadoop.hive.metastore.RetryingHMSHandler=FATAL
 log4j.logger.org.apache.hadoop.hive.ql.exec.FunctionRegistry=ERROR
 log4j.logger.org.apache.hadoop.hive.conf.HiveConf=ERROR
+
+#SPARK-575: Settings to suppress the unnecessary warning message from AuthenticationFilter
+log4j.logger.org.apache.hadoop.security.authentication.server.AuthenticationFilter=ERROR
