--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
     <scalafmt.parameters>--test</scalafmt.parameters>
     <!-- for now, not running scalafmt as part of default verify pipeline -->
     <scalafmt.skip>true</scalafmt.skip>
-    <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
+    <codehaus.jackson.version>1.9.13-atlassian-5</codehaus.jackson.version>
     <fasterxml.jackson.version>2.12.3</fasterxml.jackson.version>
     <snappy.version>1.1.8.4</snappy.version>
     <netlib.java.version>1.1.2</netlib.java.version>
