--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
     <hadoop.version>2.7.6.200-eep-810-SNAPSHOT</hadoop.version>
     <protobuf.version>3.11.1</protobuf.version>
     <yarn.version>${hadoop.version}</yarn.version>
-    <zookeeper.version>3.5.6.0-mapr-2009</zookeeper.version>
+    <zookeeper.version>3.5.6.0-mapr-SNAPSHOT</zookeeper.version>
     <curator.version>4.2.0</curator.version>
     <hive.group>org.apache.hive</hive.group>
     <hive.classifier>core</hive.classifier>
@@ -200,6 +200,7 @@
     <commons-crypto.version>1.1.0</commons-crypto.version>
     <commons-cli.version>1.2</commons-cli.version>
     <bouncycastle.version>1.60</bouncycastle.version>
+    <bc-fips.version>1.0.2.1</bc-fips.version>
     <tink.version>1.6.0</tink.version>
     <!--
     If you are changing Arrow version specification, please check
