--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>org.apache.spark</groupId>
   <artifactId>spark-parent_2.12</artifactId>
-  <version>3.2.0.0-eep-SNAPSHOT</version>
+  <version>3.2.0.0-eep-810</version>
   <packaging>pom</packaging>
   <name>Spark Project Parent POM</name>
   <url>http://spark.apache.org/</url>
@@ -122,20 +122,20 @@
     <sbt.project.name>spark</sbt.project.name>
     <slf4j.version>1.7.30</slf4j.version>
     <log4j.version>1.3.1-mapr</log4j.version>
-    <hadoop.version>2.7.6.200-eep-810-SNAPSHOT</hadoop.version>
+    <hadoop.version>2.7.6.200-eep-810</hadoop.version>
     <protobuf.version>3.11.1</protobuf.version>
     <yarn.version>${hadoop.version}</yarn.version>
-    <zookeeper.version>3.5.6.0-mapr-SNAPSHOT</zookeeper.version>
+    <zookeeper.version>3.5.6.0-mapr-2009</zookeeper.version>
     <curator.version>4.2.0</curator.version>
     <hive.group>org.apache.hive</hive.group>
     <hive.classifier>core</hive.classifier>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>2.3.9.0-eep-810-SNAPSHOT</hive.version>
-    <hive23.version>2.3.9.0-eep-810-SNAPSHOT</hive23.version>
+    <hive.version>2.3.9.0-eep-810</hive.version>
+    <hive23.version>2.3.9.0-eep-810</hive23.version>
     <!-- Version used for internal directory structure -->
     <hive.version.short>2.3</hive.version.short>
     <!-- note that this should be compatible with Kafka brokers version 0.10 and up -->
-    <kafka.version>2.6.1.0-eep-SNAPSHOT</kafka.version>
+    <kafka.version>2.6.1.100-eep-810</kafka.version>
     <derby.version>10.14.2.0</derby.version>
     <parquet.version>1.12.1</parquet.version>
     <orc.version>1.6.11</orc.version>
@@ -145,7 +145,7 @@
     <ivy.version>2.5.0</ivy.version>
     <oro.version>2.0.8</oro.version>
 
-    <maprfs.version>6.2.0.0-mapr-SNAPSHOT</maprfs.version>
+    <maprfs.version>6.2.0.0-mapr</maprfs.version>
     <ojai.version>3.1-mapr</ojai.version>
     <!--
     If you changes codahale.metrics.version, you also need to change
@@ -185,7 +185,7 @@
     <!-- org.apache.commons/commons-pool2/-->
     <commons-pool2.version>2.6.2</commons-pool2.version>
     <datanucleus-core.version>5.2.3</datanucleus-core.version>
-    <guava.version>14.0.1</guava.version>
+    <guava.version>28.2-jre</guava.version>
     <janino.version>3.0.16</janino.version>
     <jersey.version>2.34</jersey.version>
     <joda.version>2.10.10</joda.version>
@@ -3381,7 +3381,7 @@
     <profile>
       <id>hadoop-2.7</id>
       <properties>
-        <hadoop.version>2.7.6.200-eep-810-SNAPSHOT</hadoop.version>
+        <hadoop.version>2.7.6.200-eep-810</hadoop.version>
         <curator.version>4.2.0</curator.version>
         <commons-io.version>2.8.0</commons-io.version>
         <!--
