--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
     <!-- org.apache.commons/commons-pool2/-->
     <commons-pool2.version>2.6.2</commons-pool2.version>
     <datanucleus-core.version>5.2.3</datanucleus-core.version>
-    <guava.version>14.0.1</guava.version>
+    <guava.version>28.2-jre</guava.version>
     <janino.version>3.0.16</janino.version>
     <jersey.version>2.34</jersey.version>
     <joda.version>2.10.10</joda.version>
