--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
     <sbt.project.name>spark</sbt.project.name>
     <slf4j.version>1.7.30</slf4j.version>
     <log4j.version>1.3.1-mapr</log4j.version>
-    <hadoop.version>2.7.6.200-eep-810-SNAPSHOT</hadoop.version>
+    <hadoop.version>2.7.6.300-eep-820-SNAPSHOT</hadoop.version>
     <protobuf.version>3.11.1</protobuf.version>
     <yarn.version>${hadoop.version}</yarn.version>
     <zookeeper.version>3.5.6.0-mapr-SNAPSHOT</zookeeper.version>
@@ -3395,6 +3395,21 @@
     <profile>
       <id>hadoop-3.2</id>
       <!-- Default hadoop profile. Uses global properties. -->
+    </profile>
+
+    <profile>
+      <id>hadoop-3.3</id>
+      <properties>
+        <hadoop.version>3.3.3.0-mapr-eep-000-SNAPSHOT</hadoop.version>
+        <curator.version>4.2.0</curator.version>
+        <commons-io.version>2.8.0</commons-io.version>
+        <!--
+          the declaration site above of these variables explains why we need to re-assign them here
+        -->
+        <hadoop-client-api.artifact>hadoop-client</hadoop-client-api.artifact>
+        <hadoop-client-runtime.artifact>hadoop-yarn-api</hadoop-client-runtime.artifact>
+        <hadoop-client-minicluster.artifact>hadoop-client</hadoop-client-minicluster.artifact>
+      </properties>
     </profile>
 
     <profile>
