--- a/pom.xml
+++ b/pom.xml
@@ -130,8 +130,8 @@
     <hive.group>org.apache.hive</hive.group>
     <hive.classifier>core</hive.classifier>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>2.3.9.100-eep-820-SNAPSHOT</hive.version>
-    <hive23.version>2.3.9.100-eep-820-SNAPSHOT</hive23.version>
+    <hive.version>2.3.9.100-mapr-spark-EEP-9.0.0-SNAPSHOT</hive.version>
+    <hive23.version>2.3.9.100-mapr-spark-EEP-9.0.0-SNAPSHOT</hive23.version>
     <!-- Version used for internal directory structure -->
     <hive.version.short>2.3</hive.version.short>
     <!-- note that this should be compatible with Kafka brokers version 0.10 and up -->
@@ -3400,7 +3400,7 @@
     <profile>
       <id>hadoop-3.3</id>
       <properties>
-        <hadoop.version>3.3.3.0-mapr-eep-000-SNAPSHOT</hadoop.version>
+        <hadoop.version>3.3.3.0-mapr-eep-900-SNAPSHOT</hadoop.version>
         <curator.version>4.2.0</curator.version>
         <commons-io.version>2.8.0</commons-io.version>
         <!--
