--- a/pom.xml
+++ b/pom.xml
@@ -3229,6 +3229,7 @@
               <include>org.eclipse.jetty:jetty-server</include>
               <include>com.google.guava:guava</include>
               <include>org.jpmml:*</include>
+              <include>org.apache.orc:*</include>
             </includes>
           </artifactSet>
           <relocations>
