--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
     <joda.version>2.10.13</joda.version>
     <jodd.version>3.5.2</jodd.version>
     <jsr305.version>3.0.0</jsr305.version>
-    <libthrift.version>0.13.0</libthrift.version>
+    <libthrift.version>0.16.0</libthrift.version>
     <antlr4.version>4.8-1</antlr4.version>
     <jpam.version>1.1</jpam.version>
     <selenium.version>3.141.59</selenium.version>
@@ -3494,7 +3494,7 @@
     <profile>
       <id>hadoop-3.3</id>
       <properties>
-        <hadoop.version>3.3.3.0-mapr-eep-900-SNAPSHOT</hadoop.version>
+        <hadoop.version>3.3.3.0-eep-900-SNAPSHOT</hadoop.version>
         <curator.version>4.2.0</curator.version>
         <commons-io.version>2.8.0</commons-io.version>
         <!--
